2008/10/17 (TS):
 - renamed lanIpBasicTest.h -> lanIpBasicSetup.h
 - provide helper inlines (lanIpBasic.c) for drivers to manipulate
   unaligned IP addresses in ARP headers.
 - cleaned-up and documented the 'setup' api, i.e., routines the drivers
   must provide so that they can be attached/detached to/from the stack,
   started and shutdown etc.
 - removed EEPROM access from lanIpBasicTest API; this is only relevant
   for the lan9118 where we couldn't read EEPROM after initializing the
   device. We now read the 9118's EEPROM into a ram-shadow buffer
   when we start the device and transparently provide cached data
   to the user.
2008/10/16 (TS):
 - do not access IP addresses inside of ARP packets as 32-bit entities
   because they are not properly aligned. Provided helper inline routines
   to do this (lanIpBasic.c).
 - merged lanIpBscIfCreate + lanIpBscIfInit -> new API lanIpBscIfCreate().
 - lanIpBasic.c, lanIpBasic.h, udpComm.h: socket 'connection' may now
   be changed on the fly (w/o disconnecting first). Again, IIRC we simply
   follow BSD semantics.
 - lanIpBasic.c, lanIpBasic.h, udpComm.h: socket creation may now be
   passed a zero port number which lets the library pick an available
   port (following BSD socket semantics).
 - padProtoHost.c: added 'server' mode which can stream (simulated) data
   to a client.
 - padStream.c: bugfix; streamSim() used wrong stride in col-major mode;
   has to be 4 (n-channels) not nsamples.
2008/1/18 (TS):
 - lanIpBasic:
     - added udpSockNRead() to find number of bytes in RX queue available
	   for reading
	 - eliminated 'Peer' struct. Moved 'interface' to socket (where it
	   belongs).
	   The socket now holds a UDP header and a flag to indicate if
	   the socket is 'connected'. If 'connected' the UDP header
	   holds the peer information. If not connected the header can
	   be reused by udpSockSendTo() for various destinations.
	 - added udpSockSendTo() for communication over unconnected sockets.